# synthbiodata

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/data-types/: adme-data.md
docs/getting-started/: quickstart.md
docs/javascripts/: mermaid-init.js
docs/user-guide/: architecture.md
src/synthbiodata/: __init__.py  config.py
src/synthbiodata/config/schema/v1/: molecular.py
src/synthbiodata/core/: __init__.py  adme.py  base.py  generator.py  molecular.py
src/synthmoldata/: __init__.py  config.py
tests/: test_config.py  test_generators.py
tests/config/: test_base.py
tests/config/schema/: __init__.py
tests/config/schema/v1/: __init__.py  test_adme.py
tests/core/: __init__.py  test_adme.py  test_molecular.py
