[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthbiodata"
version = "0.0.0"
description = "A synthetic data generator for drug discovery machine learning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Estefania Barreto-Ojeda", email = "ojeda-e@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "polars>=0.19.0",
    "numpy>=1.21.0",
    "faker>=8.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "nox>=2023.4.22",
    "nox-uv>=0.0.4",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "typing-extensions>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/ojeda-e/synthbiodata"
Repository = "https://github.com/ojeda-e/synthbiodata.git"
Documentation = "https://github.com/ojeda-e/synthbiodata#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/synthbiodata"]


